--- a/BiotecFront/src/index.css
+++ b/BiotecFront/src/index.css
@@ -1,5 +1,57 @@
-
-
+/* src/index.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@keyframes moveBackground {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+  }
+  
+  .animation-moveBackground {
+    animation: moveBackground 30s ease infinite;
+    background-size: cover; /* Ajusta la imagen para que se muestre completa */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-position: center; /* Centra la imagen en el contenedor */
+  }
+
+  .perspective {
+    perspective: 1000px;
+  }
+  
+  .card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.7s;
+  }
+  
+  .card:hover .card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .card-face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+  }
+  
+  .card-front {
+    background-color: #1e40af; /* Azul */
+    color: #ffffff; /* Blanco */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .card-back {
+    background-color: #d97706; /* Ámbar */
+    color: #ffffff; /* Blanco */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    transform: rotateY(180deg);
+  }
